footer fixes, social links size on mobile

--- a/parts/footer.scss
+++ b/parts/footer.scss
@@ -144,6 +144,8 @@
     }  
     .wp-block-social-links {
       justify-content: flex-end; 
+      font-size: inherit;
+      gap: .2em;
     }
     .wp-block-social-links.is-style-logos-only .wp-block-social-link {
       color: var(--wp--preset--color--formo-cream);
